fix: sync all modules with the server